Adds documentation to run project